[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/pixel_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.682353, 0.647059, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 1.0
margin_top = -5.0
margin_right = 18.0
margin_bottom = 8.0
theme = ExtResource( 1 )
text = ".rpg"
uppercase = true

[node name="PlayButton" type="Button" parent="."]
margin_left = -5.0
margin_top = 10.0
margin_right = 29.0
margin_bottom = 23.0
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 2 )
text = "START"

[node name="ExitButton" type="Button" parent="."]
margin_left = -8.0
margin_top = 24.0
margin_right = 26.0
margin_bottom = 37.0
focus_neighbour_top = NodePath("../PlayButton")
focus_previous = NodePath("../PlayButton")
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 3 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameVersion" type="Label" parent="."]
margin_left = 39.0
margin_top = 23.0
margin_right = 64.0
margin_bottom = 36.0
text = "<x.y.z>"
align = 2

[node name="game by" type="Label" parent="."]
margin_left = 27.0
margin_top = -5.0
margin_right = 64.0
margin_bottom = 8.0
text = "game by"
align = 2

[node name="nuzcraft" type="Label" parent="."]
margin_left = 29.0
margin_top = 3.0
margin_right = 64.0
margin_bottom = 16.0
text = "nuzcraft"
align = 2

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
